added more front end styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path("Warehouse_v5g6tp.jpg") %>');">
   <div class="container">
-    <h1>welcome to the inventory tracker!</h1>
+    <h1>welcome to the inventory tracker</h1>
     <p>begin by selecting an action above</p>
   </div>
 
