--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="<%= new_vendor_path %>">| create new vendor<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="<%= new_vendor_path %>">create new vendor<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="<%= vendors_path %>">| all vendors</a>
@@ -21,7 +21,7 @@
         <a class="nav-link" href="<%= new_cycle_count_path %>">| create new cycle count</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="<%= item_cycle_counts_path %>">| all end-of-month cycle counts |</a>
+        <a class="nav-link" href="<%= item_cycle_counts_path %>">| all end-of-month cycle counts</a>
       </li>
     </ul>
   </div>
