--- a/app/assets/stylesheets/cycle_counts.scss
+++ b/app/assets/stylesheets/cycle_counts.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the CycleCounts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.container {
+  padding-bottom: 25px;
+}
+.cycle-count {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 24px;
+  position: fixed;
+  padding-top: 20%;
+
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.background {
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.background h3 {
+  color:white;
+}
