--- a/app/views/cycle_counts/show.html.erb
+++ b/app/views/cycle_counts/show.html.erb
@@ -1,74 +1,87 @@
+<div class="background" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('<%= cl_image_path("Warehouse_v5g6tp.jpg") %>');">
 
-<% @all_items_array = [] %>
-<% @all_selected_items_array = [] %>
-<% @all_items_array_ids = [] %>
-<% @all_selected_items_array_ids = [] %>
+  <h3> add items to your cycle count: </h3>
 
-<% @all_items.sort_by { |item| item.item.name}.each do |item| %>
-  <% @all_selected_items_array.push(item) %>
-<% end %>
 
-<% @items.sort_by { |item| item.name }.each do |item| %>
-  <% @all_items_array.push(item) %>
-<% end %>
+  <%= render "item_cycle_counts/new" %>
 
-<% @all_items_array.each do |item| %>
-  <% @all_items_array_ids.push(item.id) %>
-<% end %>
 
- <% @all_selected_items_array.each do |selected_item| %>
-  <% @all_selected_items_array_ids.push(selected_item.item.id) %>
-<% end %>
+  <h3> remaining items: </h3>
 
-<% @all_selected_items_array_ids.uniq %>
 
-<% @all_selected_items_array_ids.uniq.each do |item| %>
-  <% @all_items_array_ids.delete(item) %>
-<% end %>
+  <% @all_items_array = [] %>
+  <% @all_selected_items_array = [] %>
+  <% @all_items_array_ids = [] %>
+  <% @all_selected_items_array_ids = [] %>
 
-<% @remaining_item_ids = @all_items_array_ids %>
+  <% @all_items.sort_by { |item| item.item.name}.each do |item| %>
+    <% @all_selected_items_array.push(item) %>
+  <% end %>
 
- <div class="container">
-  <div class="row">
+  <% @items.sort_by { |item| item.name }.each do |item| %>
+    <% @all_items_array.push(item) %>
+  <% end %>
 
-  <% @remaining_item_ids.each do |remaining_item| %>
-    <% @final_item_list = @all_items_array.filter { |item| item.id == remaining_item } %>
-    <% @final_item_list.each do |item| %>
-      <div class="col-sm-3">
-        <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <%= item.name %>, count as
-                <%= item.count_type.pluralize %>
-              </li>
-            </ul>
+  <% @all_items_array.each do |item| %>
+    <% @all_items_array_ids.push(item.id) %>
+  <% end %>
+
+   <% @all_selected_items_array.each do |selected_item| %>
+    <% @all_selected_items_array_ids.push(selected_item.item.id) %>
+  <% end %>
+
+  <% @all_selected_items_array_ids.uniq %>
+
+  <% @all_selected_items_array_ids.uniq.each do |item| %>
+    <% @all_items_array_ids.delete(item) %>
+  <% end %>
+
+  <% @remaining_item_ids = @all_items_array_ids %>
+
+   <div class="container">
+    <div class="row">
+
+    <% @remaining_item_ids.each do |remaining_item| %>
+      <% @final_item_list = @all_items_array.filter { |item| item.id == remaining_item } %>
+      <% @final_item_list.each do |item| %>
+        <div class="col-sm-4">
+          <div class="card" style="width: 22rem;">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <%= item.name %>, count as
+                  <%= item.count_type.pluralize %>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-  <% end %>
-  <% end %>
+    <% end %>
+    <% end %>
+    </div>
+  </div>
+
+
+  <h3> items in your cycle count: </h3>
+
+
+   <div class="container">
+    <div class="row">
+
+    <% @all_selected_items_array.each do |selected_item| %>
+        <div class="col-sm-3">
+          <div class="card" style="width: 18rem;">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <%= selected_item.item.name %>,
+                  <%= selected_item.item_quantity %>
+                  <%= selected_item.item.count_type.pluralize(selected_item.item_quantity) %>
+                </li>
+              </ul>
+            </div>
+          </div>
+    <% end %>
+    </div>
   </div>
 </div>
 
-<%= render "item_cycle_counts/new" %>
-
- <div class="container">
-  <div class="row">
-
-  <% @all_selected_items_array.each do |selected_item| %>
-      <div class="col-sm-3">
-        <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <%= selected_item.item.name %>,
-                <%= selected_item.item_quantity %>
-                <%= selected_item.item.count_type.pluralize(selected_item.item_quantity) %>
-              </li>
-            </ul>
-          </div>
-        </div>
-  <% end %>
-  </div>
-</div>
-
-<!-- # ^ here you must be comparing item.id, because you're actually
-# comparing an item_cycle_count to an item. -->
+  <!-- # ^ here you must be comparing item.id, because you're actually
+  # comparing an item_cycle_count to an item. -->
