--- a/app/views/item_cycle_counts/index.html.erb
+++ b/app/views/item_cycle_counts/index.html.erb
@@ -1,4 +1,4 @@
- <h3> end-of-month cycle counts </h3>
+ <h3> all items | end-of-month cycle counts </h3>
 
 
 <!-- creating an array of each month -->
