--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<h3> all items | current on-hands</h3>
+<h3> all items | current inventory counts</h3>
 
 <table class="table table-hover">
   <thead class="thead-dark">
