added background image to all pages by default

--- a/app/assets/stylesheets/cycle_counts.scss
+++ b/app/assets/stylesheets/cycle_counts.scss
@@ -19,12 +19,7 @@
   min-height: 100%;
 }
 
-.background {
-  position: fixed;
-  min-width: 100%;
-  min-height: 100%;
-}
 
-.background h3 {
+h3 {
   color:white;
 }
