--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -4,9 +4,14 @@
 
 .table {
   font-family: monospace;
-  color: white;
+  color: black;
 }
 
 h3 {
   font-family: monospace;
+  color: black !important;
+}
+
+td {
+  cursor: pointer;
 }
