--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,4 @@
+
 <h3> all items | current inventory counts</h3>
 
 <table class="table table-hover">
@@ -17,9 +18,9 @@
   <% @row = 0 %>
         <% @items = @items.sort_by { |item| item.name } %>
         <% @items.each do |item| %>
-    <tr>
+    <tr data-link="<%= item_path(item) %>">
       <th scope="row"><%= @row += 1 %></th>
-         <td> <%= link_to item.name, item_path(item) %> </td>
+         <td> <%= item.name %> </td>
          <td> <%= item.vendor.name %> </td>
     <% @updated_at = [] %>
       <% item.item_cycle_counts.each do |item_cycle_count| %>
