--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,17 @@
-<div class="banner">
-  <div class="container">
-    <h1>welcome to the inventory tracker</h1>
-    <p>begin by selecting an action above</p>
-  </div>
+<div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:al_dente", :opacity=>70) %>');">
 
-  <div class="signature">
-    <p>
-      built by rhaasti <a href="https://github.com/rhaasti"> <i class="fab fa-github"></i></a>
-    </p>
+  <div class="banner">
+    <div class="container">
+      <h1>welcome to the inventory tracker</h1>
+      <p>begin by selecting an action above</p>
+    </div>
+
+    <div class="signature">
+      <p>
+        built by rhaasti <a href="https://github.com/rhaasti"> <i class="fab fa-github"></i></a>
+      </p>
+    </div>
   </div>
-</div>
 
 
 
