--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,23 +1,18 @@
+<div class="details">
+  <div class="col-sm-5">
 
-<div class="col-sm-5">
+  <div class="card border-light mb-3" style="max-width: 30rem;">
 
-<div class="card border-light mb-3" style="max-width: 30rem;">
+    <h3 class="card-header"> <%= @item.name %> </h3>
 
-  <h3 class="card-header"> <%= @item.name %> </h3>
+    <div class="card-body">
 
-  <div class="card-body">
+        <h5 class="card-title"> supplier: <%= @item.vendor.name %> </h5>
 
-      <h5 class="card-title"> supplier: <%= @item.vendor.name %> </h5>
-
-      <p class="card-text"> value: <%= number_to_currency(@item.value, precision:2) %> per <%= @item.purchase_type %> </p>
-      <p class="card-text"> purchase as: <%= @item.purchase_type.pluralize %> </p>
-      <p class="card-text"> count as: <%= @item.count_type.pluralize %>, which contain <%= @item.count_measurement %> individual <%= @item.name.pluralize(@item.count_measurement) %> </p>
-      <p class="card-text"> minimum: <%= @item.minimum %> <%= @item.count_type.pluralize %></p>
-
-
-
-
-
+        <p class="card-text"> value: <%= number_to_currency(@item.value, precision:2) %> per <%= @item.purchase_type %> </p>
+        <p class="card-text"> purchase as: <%= @item.purchase_type.pluralize %> </p>
+        <p class="card-text"> count as: <%= @item.count_type.pluralize %>, which contain <%= @item.count_measurement %> individual <%= @item.name.pluralize(@item.count_measurement) %> </p>
+        <p class="card-text"> minimum: <%= @item.minimum %> <%= @item.count_type.pluralize %></p>
 
 <% @updated_at = [] %>
       <% @item.item_cycle_counts.each do |item_cycle_count| %>
@@ -26,36 +21,37 @@
 
     <% if @item.item_cycle_counts.present?%>
 
-  <p class="card-text">  current on-hand: <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <%= @item.count_type.pluralize(@item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity) %></p>
-  <p class="card-text"> last updated:     <% if (Date.today - @updated_at.last.to_date).to_i == 1 %>
-          <td> <%= (Date.today - @updated_at.last.to_date).to_i %> day ago </td>
-        <% elsif (Date.today - @updated_at.last.to_date).to_i > 0 %>
-          <td> <%= (Date.today - @updated_at.last.to_date).to_i %> days ago </td>
-        <% else %>
-          <td> today </td>
-      <% end %>
-  </p>
-    <% @item.item_cycle_counts.reverse.each do |item_cycle_count| %>
+    <p class="card-text">  current on-hand: <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <%= @item.count_type.pluralize(@item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity) %></p>
+    <p class="card-text"> last updated:     <% if (Date.today - @updated_at.last.to_date).to_i == 1 %>
+            <td> <%= (Date.today - @updated_at.last.to_date).to_i %> day ago </td>
+          <% elsif (Date.today - @updated_at.last.to_date).to_i > 0 %>
+            <td> <%= (Date.today - @updated_at.last.to_date).to_i %> days ago </td>
+          <% else %>
+            <td> today </td>
+        <% end %>
+    </p>
+      <% @item.item_cycle_counts.reverse.each do |item_cycle_count| %>
 
+      </div>
     </div>
   </div>
 </div>
+<div class="history">
+  <div class="col-sm-3">
+    <div class="card mb-3" style="width: 18rem;">
+      <div class="card-header"><%= item_cycle_count.updated_at.strftime("%a, %b %-d %Y") %> @ <%=item_cycle_count.updated_at.strftime("%H:%M") %> UTC</div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+            <%= item_cycle_count.user.email.split("@")[0] %>
+            counted <%= item_cycle_count.item_quantity %> <%= item_cycle_count.item.count_type.pluralize(item_cycle_count.item_quantity) %>
+        </li>
+      </ul>
+    </div>
+      <% end %>
 
-<div class="col-sm-3">
-  <div class="card mb-3" style="width: 18rem;">
-    <div class="card-header"><%= item_cycle_count.updated_at.strftime("%a, %b %-d %Y") %> @ <%=item_cycle_count.updated_at.strftime("%H:%M") %> UTC</div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">
-          <%= item_cycle_count.user.email.split("@")[0] %>
-          counted <%= item_cycle_count.item_quantity %> <%= item_cycle_count.item.count_type.pluralize(item_cycle_count.item_quantity) %>
-      </li>
-    </ul>
-  </div>
-    <% end %>
-
-    <% else %>
-  <p class="card-text"> current on-hand: unknown </p>
-  <p class="card-text"> last updated: never </p>
-    <% end %>
-  </div>
-
+      <% else %>
+    <p class="card-text"> current on-hand: unknown </p>
+    <p class="card-text"> last updated: never </p>
+      <% end %>
+    </div>
+</div>
