--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
     <%= render 'shared/navbar' %>
     <div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:audrey", :opacity=>20) %>');">
     <%= yield %>
-    <p class="notice"><%= notice %></p>
+  <div class="container d-flex justify-content-center">
     <p class="alert"><%= alert %></p>
+  </div>
   </body>
 </html>
