--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,14 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="<%= root_path %>">home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="<%= new_vendor_path %>">create new vendor<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="<%= root_path %>">home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_vendor_path %>">| create new vendor</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="<%= vendors_path %>">| all vendors</a>
@@ -26,9 +28,10 @@
     </ul>
   </div>
   <% if current_user.nil? %>
-    log in
   <% else %>
+  <div class="user">
     logged in as <%= current_user.email.split("@")[0] %>
+  </div>
+    <%= link_to "sign out", destroy_user_session_path, method: :delete %>
   <% end %>
-  <%= link_to "sign out", destroy_user_session_path, method: :delete %>
 </nav>
