--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,16 +4,39 @@
   <h2> item detail | <%= @item.name %> </h2>
 </div>
 
-  <div class="details">
-      <div class="card-body">
+  <div class="container d-flex justify-content-start" style="margin-top: 50px;">
 
-          <div class="item-category"> supplier:  </div> <div class="item-info"> <%= @item.vendor.name %> </div> </br>
-          <div class="item-category"> value:  </div> <div class="item-info"> <%= number_to_currency(@item.value, precision:2) %> per <%= @item.purchase_type %> </div> </br>
-          <div class="item-category"> purchase as:  </div> <div class="item-info"> <%= @item.purchase_type.pluralize %> </div> </br>
-          <div class="item-category"> count as:  </div> <div class="item-info"> <%= @item.count_type.pluralize %>, which contain <%= @item.count_measurement %> individual <%= @item.name.pluralize(@item.count_measurement) %> </div> </br>
-          <div class="item-category"> minimum:  </div> <div class="item-info"> <%= @item.minimum %> <%= @item.count_type.pluralize %> </div> </br>
-          <div class="item-category"> purchase link:  </div> <div class="item-info"> <%= @item.purchase_link %> </div> </br>
-          <div class="item-category"> supplier stock ID:  </div> <div class="item-info"> <%= @item.vendor_stock_id %> </div> </br>
+        <div class="row">
+
+          <div class="flex-column">
+
+            <div class="item-category"> supplier:  </div> <div class="item-info"> <%= @item.vendor.name %> </div> </br>
+
+            <div class="item-category"> value:  </div> <div class="item-info"> <%= number_to_currency(@item.value, precision:2) %> per <%= @item.purchase_type %> </div> </br>
+
+            <div class="item-category"> purchase as:  </div> <div class="item-info"> <%= @item.purchase_type.pluralize %> </div> </br>
+          </div>
+        </div>
+  </div>
+
+  <div class="container d-flex justify-content-end" style="margin-top: -160px;">
+
+        <div class="row">
+
+          <div class="flex-column">
+
+            <div class="item-category"> count as:  </div> <div class="item-info"> <%= @item.count_type.pluralize %>, which contain <%= @item.count_measurement %> individual <%= @item.name.pluralize(@item.count_measurement) %> </div> </br>
+
+
+            <div class="item-category"> minimum:  </div> <div class="item-info"> <%= @item.minimum %> <%= @item.count_type.pluralize %> </div> </br>
+
+            <div class="item-category"> purchase link:  </div> <div class="item-info"> <%= @item.purchase_link %> </div> </br>
+
+            <div class="item-category"> supplier stock ID:  </div> <div class="item-info"> <%= @item.vendor_stock_id %> </div> </br>
+        </div>
+      </div>
+  </div>
+
 
   <% @updated_at = [] %>
         <% @item.item_cycle_counts.each do |item_cycle_count| %>
@@ -21,6 +44,12 @@
         <% end %>
 
       <% if @item.item_cycle_counts.present?%>
+
+<div class="container d-flex justify-content-start"  style="margin-top: -60px;">
+
+  <div class="row">
+
+    <div class="flex-column">
 
       <div class="item-category">  current on-hand: </div> <div class="item-info"> <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <%= @item.count_type.pluralize(@item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity) %> </div>  </br>
       <div class="item-category"> last updated: </div> <div class="item-info"> <% if (Date.today - @updated_at.last.to_date).to_i == 1 %> </div> </br>
@@ -31,6 +60,7 @@
               <td> today </td>
           <% end %>
       </div>
+    </div>
   </div>
         <% @item.item_cycle_counts.reverse.each do |item_cycle_count| %>
 
@@ -51,8 +81,16 @@
         <% end %>
 
         <% else %>
-      <div class="item-category"> current on-hand: </div> <div class="item-info"> unknown </div> </br>
-      <div class="item-category"> last updated: </div> <div class="item-info"> never </div>
+
+  <div class="container d-flex justify-content-start"  style="margin-top: -60px;">
+
+        <div class="row">
+
+          <div class="flex-column">
+
+            <div class="item-category"> current on-hand: </div> <div class="item-info"> unknown </div> </br>
+            <div class="item-category"> last updated: </div> <div class="item-info"> never </div>
         <% end %>
       </div>
   </div>
+</div>
