more front end, added history  to item show page

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -19,10 +19,9 @@ td {
   cursor: pointer;
 }
 
-.details {
-  display: flex;
-  justify-content: center;
-  width: cover;
+.history {
+  margin-top: 200px;
+  margin-left: -650px;
 }
 
 .item-category {
