--- a/app/assets/stylesheets/cycle_counts.scss
+++ b/app/assets/stylesheets/cycle_counts.scss
@@ -17,3 +17,12 @@
   min-width: 100%;
   min-height: 100%;
 }
+
+h3 {
+  color: white !important;
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+}
+
+.card {
+  box-shadow: 1px 1px 3px rgba(0,0,0,1);
+}
