--- a/app/assets/stylesheets/cycle_counts.scss
+++ b/app/assets/stylesheets/cycle_counts.scss
@@ -26,3 +26,12 @@ h3 {
 .card {
   box-shadow: 1px 1px 3px rgba(0,0,0,1);
 }
+
+.button {
+  color: black;
+  background-color: white;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 2px 2px 3px rgba(0,0,0,1);
+}
+
