--- a/app/views/item_cycle_counts/_new.html.erb
+++ b/app/views/item_cycle_counts/_new.html.erb
@@ -1,6 +1,6 @@
 <div class="item-cycle-count">
   <%= simple_form_for [@cycle_count, @item_cycle_count] do |f| %>
-    <%= f.association :item, collection: Item.all.sort_by { |item| item.name }, label: "item name"%>
+    <%= f.association :item, collection: Item.all.sort_by { |item| item.name }, label: "item name", required: false%>
     <%= f.input :item_quantity, label: "quantity" %>
     <%= f.button :button, "add item", class: "btn btn-dark btn-sm" %>
   <% end %>
