--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,20 +1,55 @@
 <div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:al_dente", :opacity=>70) %>');">
 
-  <%= simple_form_for(@item) do |f| %>
-    <%= f.input :name, label: "item name" %>
-    <%= f.association :vendor, label: "vendor" %>
-    <%= f.input :purchase_link, label: "purchase link" %>
-    <%= f.input :purchase_type, label: "purchase type", collection: ["box", "roll", "each", "pallet"], hint: "in which measurement do you purchase this item?"  %>
-    <%= f.input :value, label: "value", hint: "value of one purchase unit" %>
-    <%= f.input :count_type, label: "count type", collection: ["box", "roll", "each", "pallet"], hint: "in which measurement do you count this item?" %>
-    <%= f.input :count_measurement, label: "count_measurement", hint: "how many eaches are contained in one unit of the count type?" %>
-    <%= f.input :minimum, label: "minimum", hint: "minimum per count type" %>
-    <%= f.input :internal_stock_id, label: "internal stock id" %>
-    <%= f.input :vendor_stock_id, label: "supplier stock id"%>
-    <%= f.button :submit, class: "btn-primary" %>
-  <% end %>
+<div class="container d-flex justify-content-center" style="padding-top: 100px;">
+  <form style="width:700px;">
+          <%= simple_form_for(@item) do |f| %>
+    <div class="form-row">
+      <div class="form-group col-md-4">
+              <%= f.input :name, label: "item name" %>
+      </div>
+      <div class="form-group col-md-4">
+              <%= f.association :vendor, label: "vendor" %>
+      </div>
 
-  <!-- this page could use a confirmation prompt "create new item 'blue opaque dice,
-  which you count as boxes, each containing 25 units, valued at $5.32 each?'" -->
+
+      <div class="form-group col-md-4">
+                <%= f.input :purchase_link, label: "purchase link" %>
+      </div>
+      </div>
+    <div class="form-row">
+      <div class="form-group col-md-4">
+                <%= f.input :purchase_type, label: "purchase type", collection: ["box", "roll", "each", "pallet"], hint: "in which measurement do you purchase this item?"  %>
+      </div>
+      <div class="form-group col-md-4">
+               <%= f.input :vendor_stock_id, label: "supplier stock id"%>
+      </div>
+      <div class="form-group col-md-4">
+
+              <%= f.input :count_type, label: "count type", collection: ["box", "roll", "each", "pallet"], hint: "in which measurement do you count this item?" %>
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-4">
+              <%= f.input :count_measurement, label: "count_measurement", hint: "how many eaches are contained in one unit of the count type?" %>
+      </div>
+      <div class="form-group col-md-4">
+              <%= f.input :minimum, label: "minimum", hint: "minimum per count type" %>
+      </div>
+      <div class="form-group col-md-4">
+              <%= f.input :internal_stock_id, label: "internal stock id" %>
+      </div>
+    </div>
+      <div class="form-group col-md-4">
+              <%= f.input :value, label: "value", hint: "value of one purchase unit" %>
+      </div>
+
+              <%= f.button :submit, class: "btn btn-dark btn-block" %>
+          <% end %>
+
+  </form>
+</div>
+
+      <!-- this page could use a confirmation prompt "create new item 'blue opaque dice,
+      which you count as boxes, each containing 25 units, valued at $5.32 each?'" -->
 
 
