various front end

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,11 @@ input {
       }
   }
 
+.notice {
+  font-family: monospace;
+  display: flex;
+  justify-content: center;
+  color: white !important;
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+}
+
