--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,10 @@
 .navbar {
+  font-family: monospace;
   font-size: 15px;
 }
 
 .navbar .user {
+  font-family: monospace;
   color:white;
   padding-right: 12px;
 }
