--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -20,11 +20,13 @@ td {
 }
 
 .history {
+  font-family: monospace;
   margin-top: 100px;
   margin-left: 500px;
 }
 
 .item-category {
+  font-family: monospace;
   display: inline-block;
   margin: 5px;
   padding: 5px;
@@ -34,6 +36,7 @@ td {
 }
 
 .item-info {
+  font-family: monospace;
   display: inline-block;
   margin: 5px;
   padding: 5px;
