--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:audrey", :opacity=>20) %>');">
     <%= yield %>
   <div class="container d-flex justify-content-center">
-    <p class="alert"><%= alert %></p>
+    <p class="notice"><%= notice %></p>
   </div>
   </body>
 </html>
