organized and made create item page look better and added hints

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,28 +1,46 @@
 <div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:al_dente", :opacity=>70) %>');">
 
-<div class="container d-flex justify-content-center" style="padding-top: 100px;">
+<div class="container d-flex justify-content-center" style="padding-top: 60px;">
           <%= simple_form_for(@item) do |f| %>
-
+    <div class="form-group row">
               <%= f.input :name, label: "item name" %>
 
-              <%= f.association :vendor, label: "vendor" %>
-
+              <%= f.association :vendor, label: "vendor", input_html: { class: 'collection' } %>
+    </div>
+    <div class="form-group row">
               <%= f.input :purchase_link, label: "purchase link" %>
 
-              <%= f.input :purchase_type, label: "purchase type", collection: ["box", "roll", "each", "pallet"], hint: "in which measurement do you purchase this item?"  %>
+    <a data-bs-toggle="tooltip" title="in which measurement do you purchase this item?">
 
+              <%= f.input :purchase_type, label: "purchase type", collection: ["box", "roll", "each", "pallet"], label_html: { class: 'hint' }, input_html: { class: 'collection' } %>
+    </a>
+    </div>
+    <div class="form-group row">
               <%= f.input :vendor_stock_id, label: "supplier stock id"%>
+    <a data-bs-toggle="tooltip" title="in which measurement do you count this item?">
 
-              <%= f.input :count_type, label: "count type", collection: ["box", "roll", "each", "pallet"], hint: "in which measurement do you count this item?" %>
+              <%= f.input :count_type, label: "count type", collection: ["box", "roll", "each", "pallet"], label_html: { class: 'hint' }, input_html: { class: 'collection' } %>
+    </a>
+    </div>
+    <div class="form-group row">
+    <a data-bs-toggle="tooltip" title="how many eaches are contained in one unit of the count type?">
 
-              <%= f.input :count_measurement, label: "count_measurement", hint: "how many eaches are contained in one unit of the count type?" %>
+              <%= f.input :count_measurement, label: "count_measurement", label_html: { class: 'hint' } %>
+    </a>
+    <a data-bs-toggle="tooltip" title="minimum per count type">
 
-              <%= f.input :minimum, label: "minimum", hint: "minimum per count type" %>
+              <%= f.input :minimum, label: "minimum", label_html: { class: 'hint' } %>
+    </a>
 
+    </div>
+    <div class="form-group row">
               <%= f.input :internal_stock_id, label: "internal stock id" %>
 
-              <%= f.input :value, label: "value", hint: "value of one purchase unit" %>
+    <a data-bs-toggle="tooltip" title="value of one purchase unit">
 
+              <%= f.input :value, label: "value", label_html: { class: 'hint' } %>
+    </a>
+    </div>
               <%= f.button :submit, class: "btn btn-dark btn-block" %>
           <% end %>
 </div>
