--- a/app/assets/stylesheets/cycle_counts.scss
+++ b/app/assets/stylesheets/cycle_counts.scss
@@ -30,7 +30,10 @@ h3 {
 
 .button {
   font-family: monospace;
-  padding: 8px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
   color: black;
   background-color: white;
   border-radius: 5px;
