--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -19,6 +19,14 @@ td {
   cursor: pointer;
 }
 
+.hint {
+  cursor: help;
+}
+
+.collection {
+  width: 230px;
+}
+
 .history {
   font-family: monospace;
   margin-top: 100px;
