fixed various front end issues

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -21,10 +21,37 @@ td {
 
 .hint {
   cursor: help;
+  color: white !important;
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+}
+
+.label {
+  color: white !important;
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
 }
 
 .collection {
   width: 230px;
+}
+
+.container {
+  padding-top: 60px;
+}
+
+.sign-up a {
+  text-shadow: none;
+}
+
+.notice {
+  margin-top: -60px;
+  color: white !important;
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+}
+
+.alert {
+  margin-top: -60px;
+  color: black;
+  text-shadow: none;
 }
 
 .history {
