--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <%= yield %>
   <div class="container d-flex justify-content-center">
     <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
   </div>
   </body>
 </html>
