--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import "bootstrap/scss/bootstrap";
 @import "components/index";
 @import "font-awesome";
+@import "items";
+@import "cycle_counts";
 
 
 * {
@@ -21,7 +23,11 @@ input {
   font-family: monospace;
   display: flex;
   justify-content: center;
-  color: white !important;
-  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+}
+
+.alert {
+  font-family: monospace;
+  display: flex;
+  justify-content: center;
 }
 
