--- a/app/assets/stylesheets/vendors.scss
+++ b/app/assets/stylesheets/vendors.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the vendors controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.table td {
+    white-space: none;
+    width: 1%;
+}
+
+.table th {
+    white-space: none;
+    width: 1%;
+}
+
+.table-div {
+  display: flex;
+  margin-left: 400px;
+  width: 40%;
+}
+
