final (hopefully) touches on front end details

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -57,7 +57,7 @@ td {
 .history {
   font-family: monospace;
   margin-top: 100px;
-  margin-left: 500px;
+  margin-left: 35%;
 }
 
 .item-category {
