--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,14 +7,14 @@
   <div class="container d-flex justify-content-start" style="margin-top: 80px;">
         <div class="row">
           <div class="flex-column">
-            <div class="item-category"> supplier:  </div> <div class="item-info"> <%= @item.vendor.name %> </div> </br>
+            <div class="item-category"> supplier:  </div> <div class="item-info"> <%= link_to @item.vendor.name, vendor_path(@item.vendor), :class => "vendor-link" %> </div> </br>
             <div class="item-category"> value:  </div> <div class="item-info"> <%= number_to_currency(@item.value, precision:2) %> per <%= @item.purchase_type %> </div> </br>
             <div class="item-category"> purchase as:  </div> <div class="item-info"> <%= @item.purchase_type.pluralize %> </div> </br>
           </div>
         </div>
   </div>
 
-  <div class="container d-flex justify-content-end" style="margin-top: -160px;">
+  <div class="container d-flex justify-content-end" style="margin-top: -220px;">
         <div class="row">
           <div class="flex-column">
             <div class="item-category"> count as:  </div> <div class="item-info"> <%= @item.count_type.pluralize %>, which contain <%= @item.count_measurement %> individual <%= @item.name.pluralize(@item.count_measurement) %> </div> </br>
@@ -33,7 +33,7 @@
 
       <% if @item.item_cycle_counts.present?%>
 
-<div class="container d-flex justify-content-start"  style="margin-top: -108px;">
+<div class="container d-flex justify-content-start"  style="margin-top: -165px;">
   <div class="row">
     <div class="flex-column"  style="width: 1000px;">
       <div class="item-category">  current on-hand: </div> <div class="item-info"> <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <%= @item.count_type.pluralize(@item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity) %> </div>  </br>
@@ -70,7 +70,7 @@
 
         <% else %>
 
-<div class="container d-flex justify-content-start"  style="margin-top: -108px;">
+<div class="container d-flex justify-content-start"  style="margin-top: -165px;">
   <div class="row">
       <div class="flex-column" style="width: 1000px;">
         <div class="item-category"> current on-hand: </div> <div class="item-info"> unknown </div> </br>
