changed 'vendor' to 'supplier' in various locations

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
     <tr>
       <th scope="col">#</th>
       <th scope="col">Item</th>
-      <th scope="col">Vendor</th>
+      <th scope="col">Supplier</th>
       <th scope="col">Updated On</th>
       <th scope="col">Delta</th>
       <th scope="col">Current On-Hand</th>
