--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,10 +8,10 @@
         <a class="nav-link" href="<%= root_path %>">home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="<%= new_vendor_path %>">| create new vendor</a>
+        <a class="nav-link" href="<%= new_vendor_path %>">| create new supplier</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="<%= vendors_path %>">| all vendors</a>
+        <a class="nav-link" href="<%= vendors_path %>">| all suppliers</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="<%= new_item_path %>">| create new item</a>
