some changes to background image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
     <div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:audrey", :opacity=>20) %>');">
+    </div>
+    <%= render 'shared/navbar' %>
     <%= yield %>
   <div class="container d-flex justify-content-center">
     <p class="notice"><%= notice %></p>
