--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:audrey", :opacity=>20) %>');">
+    <div class="background" style="background-image: url(https://res.cloudinary.com/dgb8tgxge/image/upload/e_art:audrey/v1633054283/Warehouse_v5g6tp.jpg);">
     <%= render 'shared/navbar' %>
     <%= yield %>
   <div class="container d-flex justify-content-center">
