--- a/app/views/cycle_counts/show.html.erb
+++ b/app/views/cycle_counts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="background" style="background-image: url('<%= cl_image_path("Warehouse_v5g6tp.jpg", :effect=>"art:al_dente", :opacity=>70) %>');">
+<div class="background" style="background-image: url(https://res.cloudinary.com/dgb8tgxge/image/upload/e_art:al_dente,o_70/v1633054283/Warehouse_v5g6tp.jpg);">
 
 <h3> add items to your cycle count: </h3>
 
