--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="<%= root_path %>">home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="<%= root_path %>">home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="<%= new_vendor_path %>">| create new supplier</a>
