--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 
     <div class="signature">
       <p>
-        built by rhaasti <a href="https://github.com/rhaasti"> <i class="fab fa-github"></i></a>
+        built by rhaasti <a target="_blank" rel="noopener noreferrer" href="https://github.com/rhaasti"> <i class="fab fa-github"></i></a>
       </p>
     </div>
   </div>
