--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,6 +4,7 @@
   <h3> item detail | <%= @item.name %> </h3>
 </div>
 
+<div class="item-show-responsive-top">
   <div class="container d-flex justify-content-start" style="margin-top: 80px;">
         <div class="row">
           <div class="flex-column">
@@ -13,7 +14,9 @@
           </div>
         </div>
   </div>
+</div>
 
+<div class="item-show-responsive">
   <div class="container d-flex justify-content-end" style="margin-top: -220px;">
         <div class="row">
           <div class="flex-column">
@@ -25,6 +28,7 @@
         </div>
       </div>
   </div>
+</div>
 
   <% @updated_at = [] %>
         <% @item.item_cycle_counts.each do |item_cycle_count| %>
@@ -33,46 +37,47 @@
 
       <% if @item.item_cycle_counts.present?%>
 
-<div class="container d-flex justify-content-start"  style="margin-top: -165px;">
-  <div class="row">
-    <div class="flex-column"  style="width: 1000px;">
-      <div class="item-category">  current on-hand: </div> <div class="item-info"> <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <%= @item.count_type.pluralize(@item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity) %> </div>  </br>
-      <div class="item-category"> last updated: </div>
-      <% if (Date.today - @updated_at.last.to_date).to_i == 1 %>
-        <td> <div class="item-info"> <%= (Date.today - @updated_at.last.to_date).to_i %> day ago </div> </td>
-      <% elsif (Date.today - @updated_at.last.to_date).to_i > 0 %>
-        <td> <div class="item-info"> <%= (Date.today - @updated_at.last.to_date).to_i %> days ago </div> </td>
-      <% else %>
-        <td> <div class="item-info"> today </div> </td>
-      <% end %>
+<div class="item-show-responsive-bottom">
+  <div class="container d-flex justify-content-start"  style="margin-top: -165px;">
+    <div class="row">
+      <div class="flex-column">
+        <div class="item-category">  current on-hand: </div> <div class="item-info"> <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <%= @item.count_type.pluralize(@item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity) %> </div>  </br>
+        <div class="item-category"> last updated: </div>
+        <% if (Date.today - @updated_at.last.to_date).to_i == 1 %>
+          <td> <div class="item-info"> <%= (Date.today - @updated_at.last.to_date).to_i %> day ago </div> </td>
+        <% elsif (Date.today - @updated_at.last.to_date).to_i > 0 %>
+          <td> <div class="item-info"> <%= (Date.today - @updated_at.last.to_date).to_i %> days ago </div> </td>
+        <% else %>
+          <td> <div class="item-info"> today </div> </td>
+        <% end %>
       </div>
     </div>
   </div>
+</div>
 
-
-    <div class="history">
-        <% @item.item_cycle_counts.reverse.each do |item_cycle_count| %>
-      <div class="card mb-3" style="width: 20rem;">
-        <div class="card-header">
-          <%= item_cycle_count.updated_at.strftime("%a, %b %-d %Y") %> @ <%=item_cycle_count.updated_at.strftime("%H:%M") %> UTC
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-              <%= item_cycle_count.user.email.split("@")[0] %>
-              counted <%= item_cycle_count.item_quantity %> <%= item_cycle_count.item.count_type.pluralize(item_cycle_count.item_quantity) %>
-          </li>
-        </ul>
+<div class="history">
+    <% @item.item_cycle_counts.reverse.each do |item_cycle_count| %>
+  <div class="flex-column">
+    <div class="card mb-3" style="width: 20rem;">
+      <div class="card-header">
+        <%= item_cycle_count.updated_at.strftime("%a, %b %-d %Y") %> @ <%=item_cycle_count.updated_at.strftime("%H:%M") %> UTC
       </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+            <%= item_cycle_count.user.email.split("@")[0] %>
+            counted <%= item_cycle_count.item_quantity %> <%= item_cycle_count.item.count_type.pluralize(item_cycle_count.item_quantity) %>
+        </li>
+      </ul>
+    </div>
+      <% end %>
+  </div>
+</div>
 
-
-        <% end %>
-      </div>
-
-        <% else %>
+    <% else %>
 
 <div class="container d-flex justify-content-start"  style="margin-top: -165px;">
   <div class="row">
-      <div class="flex-column" style="width: 1000px;">
+      <div class="flex-column">
         <div class="item-category"> current on-hand: </div> <div class="item-info"> unknown </div> </br>
         <div class="item-category"> last updated: </div> <div class="item-info"> never </div>
         <% end %>
